crates/hir-ty/tests/snapshots/jls_warnings__unchecked_key_suppresses_only_unchecked.snap
---
source: crates/hir-ty/tests/jls_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    @SuppressWarnings("unchecked")
    void m(List<String> xs) {
        List raw = xs;
        List<String> unchecked = raw;
    }
}

method m(java.util.List<java.lang.String>): void
  @7:13..7:21 'raw = xs': raw-type-use: Raw use of parameterized class 'List'
